syntax = "proto3";

option csharp_namespace = "Stock.Grpc.Protos"; // Protobuf dosyasý, compiler tarafýndan Class'lara dönüþtürüldüðünde, buradaki belirtilen namespace içinde yer alacak.

service StockProtoService {
	// API'lerimizi yazýyoruz.
	rpc GetStock (GetStockRequest) returns (StockModel);
}

message GetStockRequest {
	string productName = 1;
}

message StockModel {
	string id = 1;
	string productName = 2;
	int32 quantity = 3;
}